# homOS

./: LICENSE  README.md
homOS-backend/: JSONTypes.hs  README.md  homOS-backend.cabal  stack.yaml
homOS-backend/src/: Destination.hs  Lib.hs  PredictionsByStop.hs  StopsByLocation.hs
homOS-backend/test/: Spec.hs
homOS-backend/test/fixtures/: commutes.json  predictionsbystop.json  stopsbylocation.json
homOS-frontend/: bower.json
homOS-frontend/src/: App.purs  Main.purs  Weather.purs
